# platform.core.convergence.app-comm-svc

./: CMakeLists.txt  main.cpp  project.config  remote-server.xml
Inc/: CCDebugRemote.h
Inc/Common/: REMOTEApp.h  REMOTECommon.h  REMOTEMutex.h  REMOTESemaphore.h  REMOTEString.h  REMOTEThread.h
MSF-Node/org.tizen.multiscreen/server/: config.json  index.js  package.json  server.js
MSF-Node/org.tizen.multiscreen/server/lib/: config.js  multiscreen-service.js
MSF-Node/org.tizen.multiscreen/server/lib/device/: index.js
MSF-Node/org.tizen.multiscreen/server/lib/events/: index.js
MSF-Node/org.tizen.multiscreen/server/lib/logging/: index.js
MSF-Node/org.tizen.multiscreen/server/lib/resources/public/: 404.html
MSF-Node/org.tizen.multiscreen/server/lib/resources/public/tools/websockets/: main.js  styles.less
MSF-Node/org.tizen.multiscreen/server/lib/resources/public/webapplauncher/: index.html
MSF-Node/org.tizen.multiscreen/server/lib/resources/public/webapplauncher/css/: style.css
MSF-Node/org.tizen.multiscreen/server/lib/resources/public/webapplauncher/js/: main.js
MSF-Node/org.tizen.multiscreen/server/lib/routes/: index.js
MSF-Node/org.tizen.multiscreen/server/lib/settings/: index.js
MSF-Node/org.tizen.multiscreen/server/lib/utils/: index.js
MSF-Node/org.tizen.multiscreen/server/lib/ws/lib/: WebSocket.js  WebSocketServer.js
MSF-Node/org.tizen.multiscreen/server/plugins/: device-plugin.js  plugin.js  service.json
MSF-Node/org.tizen.multiscreen/server/plugins/device-plugin-tizen/: index.js
MSF-Node/org.tizen.multiscreen/server/plugins/device-plugin-tizen/lib/: IpcClient.js
MSF-Node/org.tizen.multiscreen/server/plugins/plugin-api-v2/: index.js
MSF-Node/org.tizen.multiscreen/server/plugins/plugin-api-v2/channels/: index.js
MSF-Node/org.tizen.multiscreen/server/plugins/plugin-dev-tools/: index.js
MSF-Node/org.tizen.multiscreen/server/plugins/plugin-dev-tools/templates/: index.tpl  logs.html  tool.html
MSF-Node/org.tizen.multiscreen/server/plugins/plugin-mdns-js/: index.js
MSF-Node/org.tizen.multiscreen/server/plugins/plugin-msfd/: index.js
MSF-Node/org.tizen.multiscreen/server/test/: api-v2-channels.js  api-v2-rest.js
MSF-Node/org.tizen.multiscreen/server/test/tools/js/: less-1.7.5.min.js
MSF-Node/org.tizen.multiscreen/server/test/tools/websockets/: index.html  main.js
PinCodeService/: IPCServer.cpp  IPCServer.h  MSFServer.cpp  MSFServer.h
PinCodeService/Util/: MSFSend.cpp  MSFSend.h  MSFVconfDefine.h  RemoteLogger.cpp  RemoteLogger.h
Src/Common/: REMOTEApp.cpp  REMOTEMutex.cpp  REMOTESemaphore.cpp  REMOTEString.cpp  REMOTEThread.cpp
msf_tizen_client/: CMakeLists.txt  msf-api.pc.in
msf_tizen_client/packaging/: msf-api.spec
msf_tizen_client/src/: Application.cpp  Channel.cpp  MSFDSearchProvider.cpp
msf_tizen_client/test/: CMakeLists.txt
packaging/: app-comm-svc.spec  org.tizen.multiscreen.service  remote-server.service  remote-server.spec
