CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(msf-api)
INCLUDE(GNUInstallDirs)

# Targets
SET(target_lib "msf-api")

# Source Lists
FILE(GLOB_RECURSE SRCS src/*.cpp)
MESSAGE("Sources: ${SRCS}")

# Dependencies
SET(DEPS "glib-2.0 gio-2.0 json-glib-1.0 dlog openssl libwebsockets libcurl")

SET(MAJORVER "0.1")
SET(FULLVER "0.1")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=default -std=c++0x")

INCLUDE(FindPkgConfig)
INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_SOURCE_DIR}/include
)
ADD_DEFINITIONS(-g -O2 -Wall -fPIC -Wl,--as-needed)

# Building Library
pkg_check_modules(lib_pkg REQUIRED ${DEPS})

FOREACH(flag ${lib_pkg_CFLAGS})
SET(LIB_EXTRA_CFLAGS "${LIB_EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

ADD_LIBRARY(${target_lib} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${target_lib} ${lib_pkg_LDFLAGS} nsd-dns-sd)
SET_TARGET_PROPERTIES(${target_lib} PROPERTIES COMPILE_FLAGS ${LIB_EXTRA_CFLAGS})
SET_TARGET_PROPERTIES(${target_lib} PROPERTIES COMPILE_DEFINITIONS "LOG_TAG=\"MSF\"")
SET_TARGET_PROPERTIES(${target_lib} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${target_lib} PROPERTIES VERSION ${FULLVER})

SET(VERSION ${FULLVER})
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(PC_NAME ${PROJECT_NAME})
SET(PC_LIBDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
SET(PC_DESCRIPTION "Tizen MSF Shared Library")
SET(PC_REQUIRED ${DEPS})
SET(PC_LDFLAGS -l${target_lib})
SET(PC_CFLAGS -I\${includedir}/msf-api)

# Installing Library
INSTALL(TARGETS ${target_lib} DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT RuntimeLibraries})
INSTALL(
DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/msf-api
FILES_MATCHING PATTERN "*.h"
)



CONFIGURE_FILE(
${PROJECT_NAME}.pc.in
${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc
@ONLY
)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)

ADD_SUBDIRECTORY(test)
